Fix double scroller bug in left/right panels.

--- a/client/src/style/scss/base.scss
+++ b/client/src/style/scss/base.scss
@@ -152,11 +152,13 @@ body {
     @extend .unified-panel;
     left: 0px;
     width: $panel-width;
+    overflow: unset !important;
 }
 #right {
     @extend .unified-panel;
     right: 0px;
     width: $panel-width;
+    overflow: unset !important;
 }
 #right > .unified-panel-footer {
     .drag {
